Closed Bug 1269204 Opened 9 years ago Closed 9 years ago

crash in igd10umd32.dll@0x6d89f

Categories

(Core :: Audio/Video: Playback, defect, P1)

47 Branch
x86
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox46 --- unaffected
firefox47 + fixed
firefox48 + fixed
firefox49 --- fixed

People

(Reporter: marco, Assigned: mozbugz)

References

Details

(4 keywords)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-d508449a-83e0-4370-806f-57fc12160427. ============================================================= All crashes are on Windows 8 and Windows 8.1. The crash started to appear in Firefox 47.
Crashing Thread (57) Frame Module Signature Source Ø 0 igd10umd32.dll igd10umd32.dll@0x6d89f Ø 1 igd10umd32.dll igd10umd32.dll@0x69f3d Ø 2 igd10umd32.dll igd10umd32.dll@0x6d674 Ø 3 igd10umd32.dll igd10umd32.dll@0x8af2e Ø 4 igd10umd32.dll igd10umd32.dll@0x868bb Ø 5 igd10umd32.dll igd10umd32.dll@0x8699f Ø 6 igd10umd32.dll igd10umd32.dll@0x86f13 Ø 7 igd10umd32.dll igd10umd32.dll@0x6e70d Ø 8 igd10umd32.dll igd10umd32.dll@0x79718 9 d3d11.dll CVideoProcessor::Blt(ID3D11VideoProcessorOutputView*, unsigned int, unsigned int, D3D11_VIDEO_PROCESSOR_STREAM const*) 10 d3d11.dll d3d11.dll@0x2d569 11 msvproc.dll CxCodeVideoProcMFTDataHandler::DoProcessSampleD3D11(unsigned long, _MFT_OUTPUT_DATA_BUFFER*, unsigned long*, int*) 12 msvproc.dll CxCodeVideoProcMFTDataHandler::InternalProcessOutput(unsigned long, unsigned long, _MFT_OUTPUT_DATA_BUFFER*, unsigned long*) 13 msvproc.dll __report_gsfailure 14 msvproc.dll CMFTBase::ProcessOutput(unsigned long, unsigned long, _MFT_OUTPUT_DATA_BUFFER*, unsigned long*) 15 xul.dll mozilla::MFTDecoder::Output(RefPtr<IMFSample>*) dom/media/platforms/wmf/MFTDecoder.cpp 16 xul.dll mozilla::D3D11DXVA2Manager::CopyToImage(IMFSample*, mozilla::gfx::IntRectTyped<mozilla::gfx::UnknownUnits> const&, mozilla::layers::ImageContainer*, mozilla::layers::Image**) dom/media/platforms/wmf/DXVA2Manager.cpp 17 xul.dll mozilla::WMFVideoMFTManager::CreateD3DVideoFrame(IMFSample*, __int64, mozilla::VideoData**) dom/media/platforms/wmf/WMFVideoMFTManager.cpp 18 xul.dll mozilla::WMFVideoMFTManager::Output(__int64, RefPtr<mozilla::MediaData>&) dom/media/platforms/wmf/WMFVideoMFTManager.cpp 19 @0x146d45b7 20 xul.dll mozilla::WMFMediaDataDecoder::ProcessOutput() dom/media/platforms/wmf/WMFMediaDataDecoder.cpp 21 xul.dll mozilla::WMFMediaDataDecoder::ProcessDecode(mozilla::MediaRawData*) dom/media/platforms/wmf/WMFMediaDataDecoder.cpp 22 xul.dll nsRunnableMethodImpl<void ( mozilla::DataStorage::*)(char const*), 1, char const*>::Run() xpcom/glue/nsThreadUtils.h 23 xul.dll mozilla::TaskQueue::Runner::Run() xpcom/threads/TaskQueue.cpp 24 xul.dll nsThreadPool::Run() xpcom/threads/nsThreadPool.cpp 25 xul.dll nsThread::ProcessNextEvent(bool, bool*) xpcom/threads/nsThread.cpp
Component: Audio/Video → Audio/Video: Playback
Crash Signature: [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] → [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b]
[Tracking Requested - why for this release]: also adding a tracking flag to make sure this is on our radar. those signatures are all regressing in 47 builds and make up 0.5% of crashes on 47 beta builds currently.
Anthony, This is being tracked as a new regression in fx47. Is there anyone available to look at this? Thanks.
Flags: needinfo?(ajones)
Flags: needinfo?(ajones)
Gerald: can you blacklist here too please?
Flags: needinfo?(gsquelart)
I'll look into this soon after/with bug 1268905.
Assignee: nobody → gsquelart
Flags: needinfo?(gsquelart)
Attachment #8753176 - Flags: review?(cpearce) → review+
Comment on attachment 8753176 [details] MozReview Request: Bug 1269204 - Disable D3D11 with idg10umd32 9.17.10.2857 - r?cpearce https://reviewboard.mozilla.org/r/53056/#review49882
Version: 46 Branch → 47 Branch
Crash Signature: [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] → [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc]
Flags: needinfo?(gsquelart)
Crash Signature: [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc] → [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc] [@ igd10iumd32.dll@0x12e1cc] [@ igd10umd32.dll@0x14b17c] [@ @0x0 | igd10umd32.dll@0x178a5f]
CVideoProcessor::CLS::FinalConstruct also looks related with Intel devices.
Crash Signature: [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc] [@ igd10iumd32.dll@0x12e1cc] [@ igd10umd32.dll@0x14b17c] [@ @0x0 | igd10umd32.dll@0x178a5f] → [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc] [@ igd10iumd32.dll@0x12e1cc] [@ igd10umd32.dll@0x14b17c] [@ @0x0 | igd10umd32.dll@0x178a5f] [@ CVideoProcessor::CLS::FinalConstruct]
Crash Signature: [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc] [@ igd10iumd32.dll@0x12e1cc] [@ igd10umd32.dll@0x14b17c] [@ @0x0 | igd10umd32.dll@0x178a5f] [@ CVideoProcessor::CLS::FinalConstruct] → [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc] [@ igd10iumd32.dll@0x12e1cc] [@ igd10umd32.dll@0x14b17c] [@ @0x0 | igd10umd32.dll@0x178a5f] [@ CVideoProcessor::CLS::FinalConstruct] [@ T…
See Also: → 1255732, 1268905, 1273406
See Also: → 1273504
Also igd11dxva32.dll.
Crash Signature: TppRaiseInvalidParameter] → TppRaiseInvalidParameter] [@ igd11dxva32.dll@0x3144f]
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
Hello Gerald, should we consider uplifting this fix to Beta47? Thanks!
(In reply to Ritu Kothari (:ritu) from comment #13) > Hello Gerald, should we consider uplifting this fix to Beta47? Thanks! Thank you for asking. I am working on a better solution right now in bug 1273691, which will include fixes for bug 1268905, this bug 1269204, and bug 1273406. I'm hoping to just uplift that bug, and it will be easier to uplift future related ones too (through a pref change instead of a code change).
Flags: needinfo?(gsquelart)
Moved the following signatures to bug 1274127: (as they were not covered by the fix in this bug here) [@ igd10iumd32.dll@0x12d7bc] [@ igd10iumd32.dll@0x12e1cc] [@ igd10umd32.dll@0x14b17c] [@ @0x0 | igd10umd32.dll@0x178a5f] Also taking one of the reports from [@ TppRaiseInvalidParameter].
Crash Signature: [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ igd10iumd32.dll@0x12d7bc] [@ igd10iumd32.dll@0x12e1cc] [@ igd10umd32.dll@0x14b17c] [@ @0x0 | igd10umd32.dll@0x178a5f] [@ CVideoProcessor::CLS::FinalConstruct] [@ T… → [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ CVideoProcessor::CLS::FinalConstruct] [@ TppRaiseInvalidParameter] [@ igd11dxva32.dll@0x3144f]
Moved the following signatures to bug 1274132: (as they were not covered by the fix in this bug here) [@ CVideoProcessor::CLS::FinalConstruct] [@ TppRaiseInvalidParameter] [@ igd11dxva32.dll@0x3144f]
Crash Signature: [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b] [@ CVideoProcessor::CLS::FinalConstruct] [@ TppRaiseInvalidParameter] [@ igd11dxva32.dll@0x3144f] → [@ igd10umd32.dll@0x6d89f] [@ igd10umd32.dll@0x6d19f] [@ igd10umd32.dll@0x6d05b]
Depends on: 1346765
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: