Bug 1269204 - Disable D3D11 with idg10umd32 9.17.10.2857 - r=cpearce

MozReview-Commit-ID: Keo14BhdA6P