dom/media/platforms/wmf/WMFVideoMFTManager.cpp
@@ -162,6 +162,7 @@ struct BlacklistedD3D11DLL
 static const BlacklistedD3D11DLL sBlacklistedD3D11DLL[] =
 {
   // Keep same DLL names together.
+  { L"igd10umd32.dll", DLLVER(9,17,10,2857) },
   { L"tosqep.dll", DLLVER(1,2,15,526) },
   { L"tosqep.dll", DLLVER(1,1,12,201) },
   { L"tosqep.dll", DLLVER(1,0,11,318) },
